# DiSH

./: CMakeLists.txt  Doxyfile  README.md  init_shell.hpp  main.cpp
core/interface/: concepts.hpp  cpudef.hpp  def.hpp  osdef.hpp  struct_types.hpp  tools.hpp  types.hpp  version.hpp
core/interface/tools/: generic_pointer.hpp  pointer_list.hpp  shassert.hpp
core/src/: README.md
io/interface/: terminal.hpp
tests/: CMakeLists.txt  test_concepts.cpp  test_main.cpp  test_tools.cpp  test_version.cpp
usr/interface/: environment.hpp  user.hpp
usr/src/: user.cpp
